js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-else-braceless-typeof-import-call-source-property.js
DONOTEVALUATE
(
)
;
if
(
false
)
{
}
else
typeof
import
.
source
.
UNKNOWN
;
